--- a/app.json
+++ b/app.json
@@ -36,6 +36,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "05510ea5-cfe1-465e-8f4e-1018df63c200"
+      }
+    },
+    "owner": "iftekharu"
   }
 }
